--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -55,7 +55,7 @@
   date = {2020},
   journaltitle = {MEDICAL DIAGNOSIS},
   pages = {105},
-  url = {https://books.google.at/books?id=immSEAAAQBAJ&lpg=PA105&ots=6V4VBKRhBt&dq=RELIABILITY%2C%20REPRODUCIBILITY%20AND%20TIME-EFFICIENCY%20OF%20VOLUMETRIC%20EVALUATION%20OF%20LUNG%20TUMORS%20BY%203D-SLICER%20SEGMENTATION%20WIZARD&lr&pg=PA105#v=onepage&q=RELIABILITY,%20REPRODUCIBILITY%20AND%20TIME-EFFICIENCY%20OF%20VOLUMETRIC%20EVALUATION%20OF%20LUNG%20TUMORS%20BY%203D-SLICER%20SEGMENTATION%20WIZARD&f=false}
+  langid = {english}
 }
 
 @article{bagheriOverviewSmallfieldDosimetry2017,
@@ -431,6 +431,22 @@
   langid = {english}
 }
 
+@article{guindonApplicationDiceCoefficient2017,
+  title = {Application of the {{Dice Coefficient}} to {{Accuracy Assessment}} of {{Object-Based Image Classification}}},
+  author = {Guindon, Bert and Zhang, Ying},
+  date = {2017-01-02},
+  journaltitle = {Canadian Journal of Remote Sensing},
+  shortjournal = {Canadian Journal of Remote Sensing},
+  volume = {43},
+  number = {1},
+  pages = {48--61},
+  issn = {0703-8992, 1712-7971},
+  doi = {10.1080/07038992.2017.1259557},
+  url = {https://www.tandfonline.com/doi/full/10.1080/07038992.2017.1259557},
+  urldate = {2024-02-07},
+  langid = {english}
+}
+
 @article{halleOpenAnatomyBrowser2017,
   title = {The {{Open Anatomy Browser}}: {{A Collaborative Web-Based Viewer}} for {{Interoperable Anatomy Atlases}}},
   shorttitle = {The {{Open Anatomy Browser}}},
@@ -471,7 +487,7 @@
   location = {{New York}},
   isbn = {978-0-387-40356-4},
   pagetotal = {272},
-  keywords = {Hospital Information Systems,Hospitals,Information Management,Information storage and retrieval systems,Medical informatics,{Models, Theoretical}}
+  keywords = {Hospital Information Systems,Hospitals,Information Management,Information storage and retrieval systems,Medical informatics,Models Theoretical}
 }
 
 @article{hesseEANMESCGuidelines2008,
@@ -594,8 +610,24 @@
   location = {{New York}},
   isbn = {978-1-4614-7656-6},
   pagetotal = {893},
-  keywords = {Computer simulation,Surgery,{Surgery, Computer-Assisted}},
+  keywords = {Computer simulation,Surgery,Surgery Computer-Assisted},
   annotation = {OCLC: ocn889547698}
+}
+
+@article{kenneyHighthroughputSemiautomatedBone2022,
+  title = {A High-Throughput Semi-Automated Bone Segmentation Workflow for Murine Hindpaw Micro-{{CT}} Datasets},
+  author = {Kenney, H. Mark and Peng, Yue and Chen, Kiana L. and Ajalik, Raquel and Schnur, Lindsay and Wood, Ronald W. and Schwarz, Edward M. and Awad, Hani A.},
+  date = {2022-06},
+  journaltitle = {Bone Reports},
+  shortjournal = {Bone Reports},
+  volume = {16},
+  pages = {101167},
+  issn = {23521872},
+  doi = {10.1016/j.bonr.2022.101167},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S235218722200002X},
+  urldate = {2024-02-07},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/UDQP4ZZN/Kenney et al. - 2022 - A high-throughput semi-automated bone segmentation.pdf}
 }
 
 @article{khmelinskiiSegmentationVisualAnalysis2012a,
@@ -815,7 +847,9 @@
   date = {1989},
   journaltitle = {Retrieved December},
   volume = {25},
-  pages = {2014}
+  pages = {2014},
+  url = {https://www.gnu.org/licenses/gpl-3.0.en.html#license-text},
+  urldate = {2024-02-07}
 }
 
 @article{linDeepLearningenabledCoronary2022,
@@ -855,7 +889,7 @@
   urldate = {2023-10-21},
   abstract = {The Segment Anything Model (SAM) is a new image segmentation tool trained with the largest available segmentation dataset. The model has demonstrated that, with efficient prompting, it can create high-quality, generalized masks for image segmentation. However, the performance of the model on medical images requires further validation. To assist with the development, assessment, and application of SAM on medical images, we introduce Segment Any Medical Model (SAMM), an extension of SAM on 3D Slicer - an open-source image processing and visualization software extensively used by the medical imaging community. This open-source extension to 3D Slicer and its demonstrations are posted on GitHub (https://github.com/bingogome/samm). SAMM achieves 0.6-second latency of a complete cycle and can infer image masks in nearly real-time.},
   version = {3},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences,{FOS: Electrical engineering, electronic engineering, information engineering},Image and Video Processing (eess.IV),Machine Learning (cs.LG)}
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences,FOS: Electrical engineering electronic engineering information engineering,Image and Video Processing (eess.IV),Machine Learning (cs.LG)}
 }
 
 @article{luczakStateoftheartReviewAthletic2020,
@@ -1156,6 +1190,21 @@
   file = {/home/ro/Zotero/storage/ZRZ6LM8W/Peters et al. - 2022 - Reduction of clinical safety margins in proton the.pdf}
 }
 
+@article{pinterPolymorphSegmentationRepresentation2019,
+  title = {Polymorph Segmentation Representation for Medical Image Computing},
+  author = {Pinter, Csaba and Lasso, Andras and Fichtinger, Gabor},
+  date = {2019-04},
+  journaltitle = {Computer Methods and Programs in Biomedicine},
+  shortjournal = {Computer Methods and Programs in Biomedicine},
+  volume = {171},
+  pages = {19--26},
+  issn = {01692607},
+  doi = {10.1016/j.cmpb.2019.02.011},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0169260718313038},
+  urldate = {2024-02-07},
+  langid = {english}
+}
+
 @article{pinterSlicerRTRadiationTherapy2012,
   title = {{{SlicerRT}}: {{Radiation}} Therapy Research Toolkit for {{3D Slicer}}},
   shorttitle = {{{SlicerRT}}},
@@ -1249,6 +1298,23 @@
   isbn = {978-0-12-812972-2},
   langid = {english},
   annotation = {OCLC: 966683151}
+}
+
+@article{rushmoreAnatomicallyCuratedSegmentation2022,
+  title = {Anatomically Curated Segmentation of Human Subcortical Structures in High Resolution Magnetic Resonance Imaging: {{An}} Open Science Approach},
+  shorttitle = {Anatomically Curated Segmentation of Human Subcortical Structures in High Resolution Magnetic Resonance Imaging},
+  author = {Rushmore, R. Jarrett and Sunderland, Kyle and Carrington, Holly and Chen, Justine and Halle, Michael and Lasso, Andras and Papadimitriou, G. and Prunier, N. and Rizzoni, Elizabeth and Vessey, Brynn and Wilson-Braun, Peter and Rathi, Yogesh and Kubicki, Marek and Bouix, Sylvain and Yeterian, Edward and Makris, Nikos},
+  date = {2022-09-30},
+  journaltitle = {Frontiers in Neuroanatomy},
+  shortjournal = {Front. Neuroanat.},
+  volume = {16},
+  pages = {894606},
+  issn = {1662-5129},
+  doi = {10.3389/fnana.2022.894606},
+  url = {https://www.frontiersin.org/articles/10.3389/fnana.2022.894606/full},
+  urldate = {2024-02-07},
+  abstract = {Magnetic resonance imaging (MRI)-based brain segmentation has recently been revolutionized by deep learning methods. These methods use large numbers of annotated segmentations to train algorithms that have the potential to perform brain segmentations reliably and quickly. However, training data for these algorithms are frequently obtained from automated brain segmentation systems, which may contain inaccurate neuroanatomy. Thus, the neuroimaging community would benefit from an open source database of high quality, neuroanatomically curated and manually edited MRI brain images, as well as the publicly available tools and detailed procedures for generating these curated data. Manual segmentation approaches are regarded as the gold standard for brain segmentation and parcellation. These approaches underpin the construction of neuroanatomically accurate human brain atlases. In addition, neuroanatomically precise definitions of MRI-based regions of interest (ROIs) derived from manual brain segmentation are essential for accuracy in structural connectivity studies and in surgical planning for procedures such as deep brain stimulation. However, manual segmentation procedures are time and labor intensive, and not practical in studies utilizing very large datasets, large cohorts, or multimodal imaging. Automated segmentation methods were developed to overcome these issues, and provide high data throughput, increased reliability, and multimodal imaging capability. These methods utilize manually labeled brain atlases to automatically parcellate the brain into different ROIs, but do not have the anatomical accuracy of skilled manual segmentation approaches. In the present study, we developed a custom software module for manual editing of brain structures in the freely available 3D Slicer software platform that employs principles and tools based on pioneering work from the Center for Morphometric Analysis (CMA) at Massachusetts General Hospital. We used these novel 3D Slicer segmentation tools and techniques in conjunction with well-established neuroanatomical definitions of subcortical brain structures to manually segment 50 high resolution T1w MRI brains from the Human Connectome Project (HCP) Young Adult database. The structural definitions used herein are associated with specific neuroanatomical ontologies to systematically interrelate histological and MRI-based morphometric definitions. The resulting brain datasets are publicly available and will provide the basis for a larger database of anatomically curated brains as an open science resource.},
+  file = {/home/ro/Zotero/storage/BJYJ734Y/Rushmore et al. - 2022 - Anatomically curated segmentation of human subcort.pdf}
 }
 
 @book{russellArtificialIntelligenceModern2010,
