--- a/includes/proposal/masterthesis-vars.sty
+++ b/includes/proposal/masterthesis-vars.sty
@@ -1,25 +1,17 @@
 \ProvidesPackage{masterthesis-vars}[2024/01/08 Master Thesis Variables]
 
-\title{Mouse Micro CT Segmentation}
+\title{Development and evaluation of a bone anatomy segmentation guide for micro-CT in mice}
 \author{Stefan Rohrbacher, BSc}
 \newcommand{\matriculationNumber}{00851488}
-\newcommand{\thesiskeywords}{3DSlicer, microCT, Segmentation}
+\newcommand{\thesiskeywords}{3DSlicer, micro-CT, Segmentation}
 \newcommand{\advisor}{Dipl.-Ing. Michael Rauter}
 \newcommand{\study}{Master's Programme}
 %%\newcommand{\institutename}{Medicine}
 \newcommand{\studyprogram}{MedTech}
 \newcommand{\place}{Wiener Neustadt}
 \newcommand{\thesissubject}{Master's Thesis}
-%%\newcommand{\thesisdate}{\printdate{2024-01-08}} %todo
-\newcommand{\thesisdate}{\today} %todo
+\newcommand{\thesisdate}{\today}
 \renewcommand{\contentsname}{Table of Contents}
-
-
-\newcommand{\hyundai}{Hyundai Motor Company}
-\newcommand{\ford}{Ford Motor Company}
-\newcommand{\gm}{General Motors Company}
-\newcommand{\toyota}{Toyota Motor Corporation}
-\newcommand{\vw}{Volkswagen AG}
 
 \newcommand{\tb}{TextBlob}
 \newcommand{\nb}{\ac{NB}}
