--- a/includes/proposal/part01-page3-abstract.tex
+++ b/includes/proposal/part01-page3-abstract.tex
@@ -12,27 +12,21 @@
 \AbstractHead{Abstract in English}
 \noindent
 \normalsize
+\begin{body}
 \lipsum[1]
-
+\end{body}
 \SomeSpace
 \AbstractHead{Keywords}
 \label{s:Keywords}
 \normalsize
 \noindent
-$\mu$CT, 3D Slicer, Segmentation, ITK-SNAP
-
+\begin{body}
+$\mu$CT, Segmentation, ITK-SNAP, 3D Slicer
+\end{body}
 \glsresetall
 \SomeSpace
 
-\AbstractHead{Abstract in German}
-\noindent
-\normalsize
-\lipsum[1]
-
 \SomeSpace
-\AbstractHead{Keywords}
 \normalsize
-\noindent
-$\mu$CT, 3D Slicer, Segmentation, ITK-SNAP
 
 \glsresetall
