--- a/proposal.tex
+++ b/proposal.tex
@@ -9,6 +9,9 @@
 \usepackage{titletoc}
 \renewcommand{\contentsname}{Table of Contents}
 
+\usepackage{enumitem}
+\setlist[itemize,1]{label=$\bullet$}
+
 \newenvironment{body}{\fontfamily{Times New Roman}\selectfont}{\par}
 
 \begin{document}
@@ -16,9 +19,7 @@
 
 \pagestyle{fancy}
 \fancyhf{} %Clear Everything.
-\fancyfoot[C]{Research Proposal} %Page Number
-%     \renewcommand{\headrulewidth}{0pt} %0pt for no rule, 2pt thicker etc...
-%     \renewcommand{\footrulewidth}{0pt}
+\fancyfoot[C]{Research Proposal}
 \fancyfoot[L]{Stefan Rohrbacher}
 \fancyfoot[R]{MedTech}
 \fancyhead[R]{\thepage}
